gemini prompt added

--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -1,31 +1,37 @@
-name: Gemini CLI AI Tasks
+name: Gemini CLI Automation
 
 on:
   pull_request:
     branches: [main]
-  workflow_dispatch: # allows manual trigger
+  issues:
+    types: [opened]
+  workflow_dispatch:
 
 jobs:
-  ai-review:
+  ai-assistant:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install pnpm
+      - name: Install dependencies
         uses: pnpm/action-setup@v2
         with:
           version: 9
-          run_install: true
+          run_install: false
 
-      - name: Run Gemini CLI
-        uses: google-gemini/cli-action@v1
+      - name: Run Gemini CLI Action
+        uses: google-github-actions/run-gemini-cli@v1
         with:
-          task: 'review'
-          path: '.'
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
+          prompt: |
+            You are an AI assistant. Triage and label this issue and review this pull request.
