--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
   "recommendations": [
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "GitHub.vscode-github-actions"
+    "GitHub.vscode-github-actions",
+    "GraphQL.vscode-graphql-syntax",
+    "apollographql.vscode-apollo"
   ]
 }
