--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
     "test": "jest",
     "prepare": "husky"
   },
@@ -22,8 +21,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "graphql": "^16.11.0"
   },
   "devDependencies": {
