--- a/.github/workflows/wiki-sync.yml
+++ b/.github/workflows/wiki-sync.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Checkout Wiki repo
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository }}.wiki
-          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}/wiki
+          token: ${{ secrets.GH_PAT }}
           path: wiki
 
       - name: Copy docs to wiki
