fix(wiki-sync): changes in wiki-sync.yml

--- a/.github/workflows/wiki-sync.yml
+++ b/.github/workflows/wiki-sync.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'docs/**'
+      - 'README.md'
 
 jobs:
   sync-wiki:
@@ -23,12 +24,13 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           path: wiki
 
-      - name: Copy docs to wiki
+      - name: Sync docs
         run: |
-          cp -r docs/* wiki/
+          cp README.md wiki/Home.md
+          cp docs/*.md wiki/
           cd wiki
           git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "docs: sync all docs"
+          git commit -m "Sync docs from main repo"
           git push
