--- a/.github/workflows/wiki-sync.yml
+++ b/.github/workflows/wiki-sync.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout Wiki repo
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository }}.wiki
+          repository: ${{ github.repository }}/wiki
           token: ${{ secrets.GH_PAT }}
           path: wiki
 
