--- a/.github/workflows/wiki-sync.yml
+++ b/.github/workflows/wiki-sync.yml
@@ -16,12 +16,12 @@ jobs:
 
       - name: Sync docs to wiki
         run: |
-          # Clone the wiki repo
-          git clone https://github.com/${{ github.repository }}.wiki.git wiki
+          # Clone the wiki repo using GITHUB_TOKEN
+          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki.git wiki
       
           # Copy files into it
           cp README.md wiki/Home.md
-          cp docs/*.md wiki/ || true  # avoid error if no docs
+          cp docs/*.md wiki/ || true
       
           # Commit + push
           cd wiki
@@ -30,3 +30,4 @@ jobs:
           git add .
           git commit -m "Sync docs from main repo" || echo "No changes to commit"
           git push
+
