--- a/.github/workflows/wiki-sync.yml
+++ b/.github/workflows/wiki-sync.yml
@@ -15,19 +15,17 @@ jobs:
           fetch-depth: 0
 
       - name: Sync docs to wiki
+        env:
+          PAT: ${{ secrets.GH_PAT }}
         run: |
-          # Clone the wiki repo using GITHUB_TOKEN
-          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki.git wiki
-      
-          # Copy files into it
+          git clone https://$PAT@github.com/${{ github.repository }}.wiki.git wiki
           cp README.md wiki/Home.md
           cp docs/*.md wiki/ || true
-      
-          # Commit + push
           cd wiki
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Sync docs from main repo" || echo "No changes to commit"
           git push
+
 
