--- a/.github/workflows/wiki-sync.yml
+++ b/.github/workflows/wiki-sync.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-
+    paths:
+      - docs/**
+      - README.md
 jobs:
   sync-wiki:
     runs-on: ubuntu-latest
