--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -73,3 +73,5 @@ jobs:
           name: 'Release v${{ env.VERSION }}'
           body: 'Automated release from commit ${{ github.sha }} on branch ${{ github.ref_name }}'
           token: ${{ secrets.GH_PAT }}
+          skipIfReleaseExists: true
+
