--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -51,14 +51,15 @@ jobs:
         id: version
         run: |
           if [ "${GITHUB_REF_NAME}" == "develop" ]; then
-            # Pre-release version for develop
+            # Pre-release for develop
             pnpm version prerelease --preid alpha -m "chore(release): %s"
           else
             # Patch release for main
             pnpm version patch -m "chore(release): %s"
           fi
-          # Save new version to env
+          # Save new version to environment variable
           echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+
 
       - name: Push changes & tags
         uses: stefanzweifel/git-auto-commit-action@v6
