--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -47,14 +47,17 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-      - name: Bump version & generate changelog
+      - name: Bump version & create tag
+        id: version
         run: |
           if [ "${GITHUB_REF_NAME}" == "develop" ]; then
-            pnpm run release -- --prerelease alpha
+            pnpm version prerelease --preid alpha -m "chore(release): %s"
           else
-            pnpm run release
+            pnpm version patch -m "chore(release): %s"
           fi
-
+          VERSION=$(node -p "require('${{ github.workspace }}/package.json').version")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "VERSION=$VERSION"  # <-- helpful for debugging
 
 
       - name: Push changes & tags
