--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all history
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -50,11 +52,9 @@ jobs:
       - name: Bump version & create tag
         id: version
         run: |
-          echo ${GITHUB_REF_NAME}
           if [ "${GITHUB_REF_NAME}" == "develop" ]; then
             pnpm version prerelease --preid alpha -m "chore(release): %s"
           else
-            echo "inside else"
             pnpm version patch -m "chore(release): %s"
           fi
           VERSION=$(node -p "require('${{ github.workspace }}/package.json').version")
