--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -1,44 +1,45 @@
-name: CI + Gemini AI Review
+name: "Code Review by Gemini AI"
 
 on:
   pull_request:
-    branches: [main]
-  issues:
-    types: [opened]
-  workflow_dispatch:
 
 jobs:
-  ci-and-gemini:
+  review:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      issues: write
       pull-requests: write
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node.js and pnpm
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-      - uses: pnpm/action-setup@v2
-        with:
-          version: latest
-          run_install: true
-
-      - name: Run ESLint
-        run: pnpm lint
-
-      - name: Run Tests
-        run: pnpm test || echo "Tests failed but continuing to AI review"
-
-      - name: Run Gemini CLI
-        uses: google-github-actions/run-gemini-cli@v0.1.1
+      - uses: actions/checkout@v3
+      - name: "Get diff of the pull request"
+        id: get_diff
+        shell: bash
+        env:
+          PULL_REQUEST_HEAD_REF: "${{ github.event.pull_request.head.ref }}"
+          PULL_REQUEST_BASE_REF: "${{ github.event.pull_request.base.ref }}"
+        run: |-
+          git fetch origin "${{ env.PULL_REQUEST_HEAD_REF }}"
+          git fetch origin "${{ env.PULL_REQUEST_BASE_REF }}"
+          git checkout "${{ env.PULL_REQUEST_HEAD_REF }}"
+          git diff "origin/${{ env.PULL_REQUEST_BASE_REF }}" > "diff.txt"
+          {
+            echo "pull_request_diff<<EOF";
+            cat "diff.txt";
+            echo 'EOF';
+          } >> $GITHUB_OUTPUT
+      - uses: rubensflinco/gemini-code-review-action@1.0.5
+        name: "Code Review by Gemini AI"
+        id: review
         with:
           gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
-          prompt: 'Review this pull request according to our guidelines.'
-          settings: |
-            {
-              "config_file": "GEMINI.md"
-            }
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_repository: ${{ github.repository }}
+          github_pull_request_number: ${{ github.event.pull_request.number }}
+          git_commit_hash: ${{ github.event.pull_request.head.sha }}
+          model: "gemini-1.5-pro-latest"
+          pull_request_diff: |-
+            ${{ steps.get_diff.outputs.pull_request_diff }}
+          pull_request_chunk_size: "3500"
+          extra_prompt: |-
+            Sempre responda em português brasileiro!
+          log_level: "DEBUG"
